
    * Building with "-ffloat-store" in CFLAGS (instead of "-ffast-math")
      to allow stamp tinting code to work properly.
      Thanks to: Albert Cahalan <albert@users.sf.net>

    * Silencing any errors when running kde- or gnome-config during install.

    * Implemented strcasestr() for systems which don't have it.

  * Bug Fixes:
    ----------
    * tux Paint's scalable icon (tuxpaint-icon.svg) caused Gnome panel to
      go wild (due to "libarts" bug?).  Changed a vector value which apparently
      fixes it (and caused no noticable changes to the icon).
    
    * Added GetSystemFontDir() and amended WIN32 code so that the system fonts
      option work correctly on Windows.

    * Properly handles a variety of PNG formats when loading Starter images
      and turning them into thumbnails.  (Tested with indexed PNGs, and
      PNGs where RGB colors were stored, even where pixels were
      fully transparent.)

    * Clicking between the rightmost color and the edge of Tux Paint's display
      would crash Tux Paint.  (Fixes DBTS #352556)

    * Bottom of grass would initially be clipped due to incorrect canvas
      updating.  Fixed.

    * Improved handling of scroll button state to prevent it from getting
      into an infinite loop.  (Fixes bug #1396706)

    * Spaces in filenames were not working in 'tuxpaint-import.sh'.
      (Fixes bug #1527884)
      James Le Cuirot


2005.November.26 (0.9.15b)

  * Bug Workaround:
    ---------------
    * Japanese TrueType Font did not like being rendered at 16pt, so
      reverted to larger, 18pt size.
      (Other fonts were fine.  I suspect it is a SDL_ttf or FreeType bug.)

  * Documentation update:
    ---------------------
    * "Thick" and "Thin" magic tools were removed, so removed mention
      of them from README documentation.

    * Source files and documentation files tagged with CVS Id tags
      for easier version tracking.
      Mark K. Kim <tuxNO_SOLICITATIONpaint-dev@cbreak.org>
